Replace URLs I don't want to print with comments

--- a/halftime-hash.bib
+++ b/halftime-hash.bib
@@ -90,7 +90,7 @@ volume = {46},
 number = {5},
 issn = {0004-5411},
 url = {https://doi.org/10.1145/324133.324179},
-note = {\url{http://www.math.tau.ac.il/~nogaa/PDFS/linhash13.pdf}
+_note = {\url{http://www.math.tau.ac.il/~nogaa/PDFS/linhash13.pdf},
  \url{https://tidsskrift.dk/brics/article/view/1880}},
 journal = {J. ACM},
 month = sep,
@@ -133,7 +133,7 @@ issn = "0196-6774",
 url = "http://www.sciencedirect.com/science/article/pii/S0196677403001925",
 author = "Rasmus Pagh and Flemming Friche Rodler",
 keywords = "Data structures, Dictionaries, Information retrieval, Searching, Hashing, Experiments",
-note = {\url{https://www.itu.dk/people/pagh/papers/cuckoo-jour.pdf}}
+_note = {\url{https://www.itu.dk/people/pagh/papers/cuckoo-jour.pdf}}
 }
 
 @inproceedings{siphash,
@@ -211,7 +211,7 @@ series = {LNCS},
 keywords = {},
 pubstate = {published},
 tppubtype = {inproceedings},
-url = {https://pages.cpsc.ucalgary.ca/~woelfel/paper/efficient_strongly/efficient_strongly.pdf}
+_url = {https://pages.cpsc.ucalgary.ca/~woelfel/paper/efficient_strongly/efficient_strongly.pdf}
 }
 
 @article{simple-hash-functions-work,
@@ -224,7 +224,7 @@ url = {https://pages.cpsc.ucalgary.ca/~woelfel/paper/efficient_strongly/efficien
  journal = {Theory of Computing},
  volume = {9},
  number = {30},
- URL = {http://www.theoryofcomputing.org/articles/v009a030},
+ _URL = {http://www.theoryofcomputing.org/articles/v009a030},
 }
 
 @inbook{universe-collapse-linear-probing,
@@ -235,8 +235,9 @@ chapter = {},
 pages = {655-664},
 year = {2009},
 doi = {10.1137/1.9781611973068.72},
-URL = {https://epubs.siam.org/doi/abs/10.1137/1.9781611973068.72},
-eprint = {https://epubs.siam.org/doi/pdf/10.1137/1.9781611973068.72}
+_URL = {https://epubs.siam.org/doi/abs/10.1137/1.9781611973068.72},
+_eprint = {https://epubs.siam.org/doi/pdf/10.1137/1.9781611973068.72},
+  publisher = {Society for Industrial and Applied Mathematics}
 }
 
 @misc{i7-7800x,
@@ -369,7 +370,7 @@ url = {https://github.com/rurban/smhasher}
    title={Fuzzy Extractors: How to Generate Strong Keys from Biometrics and Other Noisy Data},
    volume={38},
    ISSN={1095-7111},
-   url={http://dx.doi.org/10.1137/060651380},
+   _url={http://dx.doi.org/10.1137/060651380},
    DOI={10.1137/060651380},
    number={1},
    journal={SIAM Journal on Computing},
