Add a couple of DOIs

--- a/halftime-hash.bib
+++ b/halftime-hash.bib
@@ -118,9 +118,10 @@ year="2018",
 publisher="Springer International Publishing",
 pages="257--279",
 isbn="978-3-319-98355-4",
+doi={10.1007/978-3-319-98355-4_15}
 }
-%note={\url{https://doi.org/10.1007/978-3-319-98355-4_15}},
-%}
+
+
 
 @article{cuckoo-journal,
 title = "Cuckoo hashing",
@@ -200,12 +201,11 @@ year = {2019},
 @inproceedings{woelfel-toeplitz,
 title = {Efficient Strongly Universal and Optimally Universal Hashing},
 author = {Philipp Woelfel},
-//doi = {10.1007/3-540-48340-3_24},
+doi = {10.1007/3-540-48340-3_24},
 year = {1999},
 date = {1999-01-01},
 booktitle = {Mathematical Foundations of Computer Science 1999, 24th International Symposium},
 volume = {1672},
-number = {0},
 pages = {262-272},
 series = {LNCS},
 keywords = {},
