Add code to help escape underscores in non-math mode in bibliography

--- a/halftime-hash.tex
+++ b/halftime-hash.tex
@@ -9,6 +9,7 @@
 \usepackage{graphicx}
 \PassOptionsToPackage{hyphens}{url}\usepackage[pdftitle={HalftimeHash: Modern Hashing without 64-bit Multipliers or Finite Fields},hidelinks]{hyperref}
 \usepackage{microtype}
+\usepackage[strings]{underscore}
 
 \DeclareMathOperator{\adj}{adj}
 
