No need to cite a paper about layers of maxima

--- a/halftime-hash.tex
+++ b/halftime-hash.tex
@@ -545,7 +545,7 @@ The avoidance of doubling the number of multiplications for twice the output siz
   \label{frontier}
   Trade-offs for almost-universal string hashing functions on strings of size 250KB on an i7-7800x.
   UMASH comes in two variants based on the output width in bits; clhash doesn't, but running clhash twice is included in the chart.
-  For each clhash / UMASH version, at least one version of HalftimeHash is faster and has lower collision probability. \protect\cite{layer-of-maxima}
+  For each clhash / UMASH version, at least one version of HalftimeHash is faster and has lower collision probability.% \protect\cite{layer-of-maxima}
 }
 \end{figure}
 
