Make acknowledgements an inline section

--- a/halftime-hash.tex
+++ b/halftime-hash.tex
@@ -624,7 +624,7 @@ Areas of future research include:
 
 
 
-\section*{Acknowledgments}
+\subsubsection*{Acknowledgments}
 Thanks to Daniel Lemire, Paul Khuong, and Guy Even for helpful discussions and feedback.
 
 
