Use URL, not DOI
This ensures hyperlinks, even DOIs, are all the same color (blue)

--- a/halftime-hash.bib
+++ b/halftime-hash.bib
@@ -118,7 +118,8 @@ year="2018",
 publisher="Springer International Publishing",
 pages="257--279",
 isbn="978-3-319-98355-4",
-doi={10.1007/978-3-319-98355-4_15}
+_doi={10.1007/978-3-319-98355-4_15},
+url={https://doi.org/10.1007/978-3-319-98355-4_15}
 }
 
 
@@ -201,7 +202,8 @@ year = {2019},
 @inproceedings{woelfel-toeplitz,
 title = {Efficient Strongly Universal and Optimally Universal Hashing},
 author = {Philipp Woelfel},
-doi = {10.1007/3-540-48340-3_24},
+_doi = {10.1007/3-540-48340-3_24},
+url = {https://doi.org/10.1007/3-540-48340-3_24},
 year = {1999},
 date = {1999-01-01},
 booktitle = {Mathematical Foundations of Computer Science 1999, 24th International Symposium},
@@ -219,12 +221,12 @@ _url = {https://pages.cpsc.ucalgary.ca/~woelfel/paper/efficient_strongly/efficie
  title = {Why Simple Hash Functions Work: Exploiting the Entropy in a Data Stream},
  year = {2013},
  pages = {897--945},
- doi = {10.4086/toc.2013.v009a030},
+ _doi = {10.4086/toc.2013.v009a030},
  publisher = {Theory of Computing},
  journal = {Theory of Computing},
  volume = {9},
  number = {30},
- _URL = {http://www.theoryofcomputing.org/articles/v009a030},
+ URL = {http://www.theoryofcomputing.org/articles/v009a030},
 }
 
 @inbook{universe-collapse-linear-probing,
@@ -234,8 +236,8 @@ booktitle = {Proceedings of the 2009 Annual ACM-SIAM Symposium on Discrete Algor
 chapter = {},
 pages = {655-664},
 year = {2009},
-doi = {10.1137/1.9781611973068.72},
-_URL = {https://epubs.siam.org/doi/abs/10.1137/1.9781611973068.72},
+_doi = {10.1137/1.9781611973068.72},
+URL = {https://epubs.siam.org/doi/abs/10.1137/1.9781611973068.72},
 _eprint = {https://epubs.siam.org/doi/pdf/10.1137/1.9781611973068.72},
   publisher = {Society for Industrial and Applied Mathematics}
 }
@@ -370,8 +372,8 @@ url = {https://github.com/rurban/smhasher}
    title={Fuzzy Extractors: How to Generate Strong Keys from Biometrics and Other Noisy Data},
    volume={38},
    ISSN={1095-7111},
-   _url={http://dx.doi.org/10.1137/060651380},
-   DOI={10.1137/060651380},
+   url={http://dx.doi.org/10.1137/060651380},
+   _DOI={10.1137/060651380},
    number={1},
    journal={SIAM Journal on Computing},
    publisher={Society for Industrial & Applied Mathematics (SIAM)},
