Match samplepaper.tex

--- a/halftime-hash.tex
+++ b/halftime-hash.tex
@@ -1,4 +1,4 @@
-\documentclass{llncs}
+\documentclass[runningheads]{llncs}
 
 \pdfoutput=1
 
@@ -10,10 +10,11 @@
 \PassOptionsToPackage{hyphens}{url}\usepackage[pdftitle={HalftimeHash: Modern Hashing without 64-bit Multipliers or Finite Fields},hidelinks]{hyperref}
 \usepackage{microtype}
 \usepackage[strings]{underscore}
+\usepackage{doi}
 
 \DeclareMathOperator{\adj}{adj}
 
-%\renewcommand\UrlFont{\color{blue}\rmfamily}
+\renewcommand\UrlFont{\color{blue}\rmfamily}
 
 \newcommand{\reals}{\mathbb{R}}
 \newcommand{\rats}{\mathbb{Q}}
